Kanban: fix the clipping of the verdict badge

--- a/app/assets/stylesheets/kanban.scss
+++ b/app/assets/stylesheets/kanban.scss
@@ -79,8 +79,8 @@
   td.alt, th.alt { background: #efefef; }
   
   ol, ul {
-    margin: 0 1.5em;
-    padding: 0;
+    margin: 0;
+    padding: 0 1.5em 2px;
     display: block;
     overflow: hidden;
     
